--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,16 @@
 {
     "name": "pilipinews/common",
-    "description": "Common tools for the Pilipinews package.",
+    "description": "Abstractions and interfaces for Pilipinews packages.",
     "homepage": "https://pilipinews.github.io",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Rougin Royce Gutib",
+            "email": "rougingutib@gmail.com",
+            "homepage": "https://rougin.github.io",
+            "role": "Developer"
+        }
+    ],
     "require": {
         "php": ">=5.3.0",
         "league/html-to-markdown": "~4.0",
@@ -21,6 +29,14 @@
     "autoload-dev": {
         "psr-4": {
             "Pilipinews\\Common\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "phpunit"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
         }
     }
 }
