--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "require": {
         "php": ">=5.3.0",
         "league/html-to-markdown": "~4.0",
-        "symfony/css-selector": "~3.0",
-        "symfony/dom-crawler": "~3.0"
+        "symfony/css-selector": ">=2.8",
+        "symfony/dom-crawler": ">=2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.2|~5.7",
