--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "league/html-to-markdown": "~4.0",
-        "symfony/css-selector": ">=2.8",
-        "symfony/dom-crawler": ">=2.8"
+        "league/html-to-markdown": "~4.8",
+        "symfony/dom-crawler": ">=2.8.45",
+        "symfony/css-selector": ">=2.8.45"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.2|~5.7",
