--- a/composer.json
+++ b/composer.json
@@ -3,39 +3,49 @@
     "description": "Abstractions and interfaces for Pilipinews packages.",
     "homepage": "https://pilipinews.github.io",
     "license": "MIT",
-    "authors": [
+    "authors":
+    [
         {
-            "name": "Rougin Royce Gutib",
+            "name": "Rougin Gutib",
             "email": "rougingutib@gmail.com",
             "homepage": "https://rougin.github.io",
             "role": "Developer"
         }
     ],
-    "require": {
+    "require":
+    {
         "php": ">=5.3.0",
         "league/html-to-markdown": "~4.8",
         "symfony/dom-crawler": ">=2.8.45",
         "symfony/css-selector": ">=2.8.45"
     },
-    "require-dev": {
+    "require-dev":
+    {
         "phpunit/phpunit": "~4.2|~5.7",
         "scrutinizer/ocular": "~1.1.0"
     },
-    "autoload": {
-        "psr-4": {
+    "autoload":
+    {
+        "psr-4":
+        {
             "Pilipinews\\Common\\": "src"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
+    "autoload-dev":
+    {
+        "psr-4":
+        {
             "Pilipinews\\Common\\": "tests"
         }
     },
-    "scripts": {
+    "scripts":
+    {
         "test": "phpunit"
     },
-    "extra": {
-        "branch-alias": {
+    "extra":
+    {
+        "branch-alias":
+        {
             "dev-master": "1.0-dev"
         }
     }
