--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
     "name": "pilipinews/common",
     "description": "Abstractions and interfaces for Pilipinews packages.",
-    "homepage": "https://pilipinews.github.io/",
+    "homepage": "https://pilipinews.com/",
     "license": "MIT",
     "authors":
     [
         {
             "email": "rougingutib@gmail.com",
-            "homepage": "https://rougin.github.io",
+            "homepage": "https://roug.in/",
             "name": "Rougin Gutib",
             "role": "Software Engineer"
         }
